# jackie3d

jackie/: AUTHORS  ChangeLog  Doxyfile  LICENSE.BSD  Makefile.in  aclocal.m4  configure  configure.in  jackie.kdevelop  jackie.kdevelop.pcs  jackie.kdevses  mkinstalldirs
jackie/autom4te.cache/: output.0  requests  traces.0
jackie/debug/: Makefile  config.h  config.status  libtool
jackie/debug/src/: Makefile  jackie.lo
jackie/debug/src/.deps/: jackie.Plo
jackie/debug/src/facade/: Makefile
jackie/debug/src/facade/.deps/: attribute.Po  attributebegin.Po  attributeend.Po  (+34 more)
jackie/debug/src/port/: Makefile
jackie/debug/src/support/: Makefile
jackie/debug/src/util/: Makefile
jackie/src/: Makefile.am  Makefile.in  jackiefacade.hpp  jackieint.hpp
jackie/src/facade/: Makefile.am  Makefile.in  attribute.cpp  attributebegin.cpp  attributeend.cpp  begin.cpp  color.cpp  colorsamples.cpp  concattransform.cpp  constructor.cpp  cropwindow.cpp  declare.cpp  destructor.cpp  end.cpp  format.cpp  framebegin.cpp  frameend.cpp  identity.cpp  jackiefacade.cpp  jackiefacadedelegate.hpp  motionbegin.cpp  motionend.cpp  objectbegin.cpp  objectend.cpp  objectinstance.cpp  opacity.cpp  option.cpp  perspective.cpp  pixelfilter.cpp  pixelvariance.cpp  projection.cpp  rotate.cpp  scale.cpp  screenwindow.cpp  shutter.cpp  sphere.cpp  surface.cpp  transform.cpp  transformbegin.cpp  transformend.cpp  (+4 more)
jackie/src/port/: Makefile.am  Makefile.in
jackie/src/support/: Makefile.am  Makefile.in
jackie/src/util/: Makefile.am  Makefile.in  metaclass.hpp  types.hpp
jackie/templates/: hpp
