INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO
bin_PROGRAMS =  jackie
jackie_SOURCES = declare.cpp begin.cpp end.cpp framebegin.cpp frameend.cpp worldbegin.cpp worldend.cpp format.cpp screenwindow.cpp cropwindow.cpp projection.cpp shutter.cpp pixelvariance.cpp pixelfilter.cpp colorsamples.cpp option.cpp attributebegin.cpp attributeend.cpp color.cpp opacity.cpp surface.cpp identity.cpp transform.cpp concattransform.cpp perspective.cpp translate.cpp rotate.cpp scale.cpp transformbegin.cpp transformend.cpp attribute.cpp sphere.cpp objectbegin.cpp objectend.cpp objectinstance.cpp motionbegin.cpp motionend.cpp
noinst_HEADERS = types.hpp jackieimpl.hpp variablemanager.hpp


